--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -3,62 +3,67 @@
 
   <%= form_with model: @user, url: update_mypage_path, method: :patch do |f| %>
   <table class="table">
-    <tr>
-      <td class="col-6"><%= f.file_field :image, accept: "image/*" %></td>
-      <td class="col-6">
-        <div><strong>ユーザーネーム</strong></div>
-        <div>
-          <%= f.text_field :name, class: "form-control name" %>
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <td><strong>プロフィール</strong></td>
-      <td><%= f.text_area :bio, class: 'form-control' %></td>
-    </tr>
-    <tr>
-      <td><strong>性別</strong></td>
-      <td>
-        <%= f.select :gender, @gender_options, { include_blank: '選択してください' }, class: 'form-control' %>
-      </td>
-      <td><strong>年齢</strong></td>
-      <td>
-        <%= f.select :age, @age_options, { include_blank: '選択してください' }, class: 'form-control' %>
-      </td>
-    </tr>
-    <tr>
-      <td><strong>喫煙</strong></td>
-      <td>
-        <%= f.select :smoking, @smoking_options, { include_blank: '選択してください' }, class: 'form-control' %>
-      </td>
-      <td><strong>飲酒</strong></td>
-      <td>
-        <%= f.select :drinking, @drinking_options, { include_blank: '選択してください' }, class: 'form-control' %>
-      </td>
-    </tr>
-    <tr>
-      <td><strong>行った国数</strong></td>
-      <td>
-        <%= f.text_field :country_count, class: 'form-control', placeholder: "数字を入力"%>
-      </td>
-      <td><strong>好きな地域</strong></td>
-      <td>
-        <%= f.select :favorite_area, @favorite_area_options, { include_blank: '選択してください' }, class: 'form-control' %>
-      </td>
-    </tr>
-    <tr>
-      <td><strong>予算</strong></td>
-      <td>
-        <%= f.select :budget, @budget_options, { include_blank: '選択してください' }, class: 'form-control' %>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <div class="form-group">
+    <tbody>
+      <tr>
+        <td colspan="2" style="width: 50%; text-align: center;"><%= f.file_field :image, accept: "image/*" %></td>
+        <td colspan="2" style="width: 50%;">
+          <div><strong>ユーザーネーム</strong></div>
+          <div>
+            <%= f.text_field :name, class: "form-control name" %>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2" style="width: 50%;"><strong>プロフィール</strong></td>
+        <td colspan="2" style="width: 50%;"><%= f.text_area :bio, class: 'form-control' %></td>
+      </tr>
+      <tr>
+        <td style="width: 25%;"><strong>性別</strong></td>
+        <td style="width: 25%;">
+          <%= f.select :gender, @gender_options, { include_blank: '選択してください' }, class: 'form-control' %>
+        </td>
+        <td style="width: 25%;"><strong>年齢</strong></td>
+        <td style="width: 25%;">
+          <%= f.select :age, @age_options, { include_blank: '選択してください' }, class: 'form-control' %>
+        </td>
+      </tr>
+      <tr>
+        <td><strong>喫煙</strong></td>
+        <td>
+          <%= f.select :smoking, @smoking_options, { include_blank: '選択してください' }, class: 'form-control' %>
+        </td>
+        <td><strong>飲酒</strong></td>
+        <td>
+          <%= f.select :drinking, @drinking_options, { include_blank: '選択してください' }, class: 'form-control' %>
+        </td>
+      </tr>
+      <tr>
+        <td><strong>行った国数</strong></td>
+        <td>
+          <%= f.text_field :country_count, class: 'form-control', placeholder: "数字を入力"%>
+        </td>
+        <td><strong>好きな地域</strong></td>
+        <td>
+          <%= f.select :favorite_area, @favorite_area_options, { include_blank: '選択してください' }, class: 'form-control' %>
+        </td>
+      </tr>
+      <tr>
+        <td><strong>予算</strong></td>
+        <td>
+          <%= f.select :budget, @budget_options, { include_blank: '選択してください' }, class: 'form-control' %>
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td style="text-align: right;">
+          <%= link_to "退会する", confirm_users_path, class: "btn btn-danger" %>
+        </td>
+        <td>
           <%= f.submit "保存する", class: "btn btn-dark" %>
-        </div>
-      </td>
-    </tr>
+        </td>
+        <td></td>
+      </tr>
+    </tbody>
   </table>
   <% end %>
 </div>
