投稿詳細画面作成中

--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,27 +1,37 @@
 <%= flash[:post_success] %>
 
-<div class="container">
-  <table>
-    <thead>
-      <th><%= @post.title %></th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          <%= image_tag @user.get_profile_image(50, 50), class: "rounded-circle" %>
-          <%= @user.name %>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <%= @post.body %>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <%= @post.post_image %>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+<div class="container ">
+  <div class="row justify-content-center">
+    <div style="margin-top: 70px; margin-bottom: 30px; font-weight: bold; font-size: 45px;">
+      <%= @post.title %>
+    </div>
+  </div>
+  
+  <div class="row justify-content-center">
+    <div class="col-1">
+      <%= image_tag @user.get_profile_image(100, 100), class: "rounded-circle" %>
+    </div>
+    <div class="col-9">
+      <%= @user.name %>
+    </div>
+    <div>  
+      <i class="fa-regular fa-clock"></i>投稿日：<%= @post.created_at.strftime("%Y年%m月%d日") %>
+      <i class="fa-regular fa-clock"></i>最終変更日：<%= @post.updated_at.strftime("%Y年%m月%d日") %>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="col">
+      <%= @post.post_image %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <%= @post.body %>
+    </div>  
+  </div>
 </div>
+    
+      
+    
+  
