--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,5 +1,36 @@
 <div class="container">
-  <div class="d-flex justify-content-center mt-5">
-    <h1>HOME</h1>
+  <div class="mt-4" style="text-align: right;">
+    <%= link_to new_post_path, class: "text-dark" do %>
+      <button class="btn btn-dark btn-lg">投稿を作成する <i class="fa-solid fa-pen"></i></button>
+    <% end %>
   </div>
+
+  <div class="d-flex justify-content-center mt-3">
+    <div style="font-weight: bold; font-size: 30px;">
+      みんなの投稿
+    </div>
+  </div>
+
+  <table style="width: 75%; margin: auto; margin-top: 20px;">
+    <tbody>
+      <% @posts.each do |post| %>
+      <tr>
+        <td>
+          <%= link_to(post.user) do %>
+          <%= image_tag post.user.get_profile_image(50, 50), class: "rounded-circle" %>
+          <span style="color: #343a40; font-weight: bold; margin-left: 3px;"><%= post.user.name %></span>
+
+          <% end %>
+        </td>
+        <td style="font-weight: bold; font-size: 20px">
+          <%= link_to post.title, post_path(post.id), style: "color: #343a40;" %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+<div class="pagination d-flex justify-content-center margin-top: 20px;">
+  <%= paginate @posts %>
 </div>
