--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -36,7 +36,7 @@
             <strong>画像</strong> <span class="badge badge-secondary">任意</span>
           </div>
           <div style="margin-top: 10px;">
-            <%= f.file_field :post_image %>
+            <%= f.file_field :post_image, accept: 'image/*'%>
           </div>
         </td>
       </tr>
