--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="mt-4" style="text-align: right;">
+  <div class="mt-5" style="text-align: right;">
     <%= link_to new_post_path, class: "text-dark" do %>
       <button class="btn btn-dark btn-lg">投稿を作成する <i class="fa-solid fa-pen"></i></button>
     <% end %>
@@ -7,30 +7,35 @@
 
   <div class="d-flex justify-content-center mt-3">
     <div style="font-weight: bold; font-size: 30px;">
-      みんなの投稿
+      みんなの投稿 <i class="fa-solid fa-map-pin"></i>
     </div>
   </div>
 
-  <table style="width: 75%; margin: auto; margin-top: 20px;">
-    <tbody>
-      <% @posts.each do |post| %>
-      <tr>
-        <td>
-          <%= link_to(post.user) do %>
-          <%= image_tag post.user.get_profile_image(50, 50), class: "rounded-circle" %>
-          <span style="color: #343a40; font-weight: bold; margin-left: 3px;"><%= post.user.name %></span>
-
-          <% end %>
-        </td>
-        <td style="font-weight: bold; font-size: 20px">
-          <%= link_to post.title, post_path(post.id), style: "color: #343a40;" %>
-        </td>
-      </tr>
+  <% @posts.each do |post| %>
+    <div class="card mb-3" style="width: 50%; margin: auto; margin-top: 20px; border-radius: 25px; overflow: hidden;">
+      <% if post.post_image.attached? %>
+        <%= image_tag post.post_image, class: "card-img-top", style: "width: 100%; height: 150px;" %>
+      <% else %>
+        <%= image_tag 'no_image2', class: "card-img-top", style: "width: 100%; height: 150px;" %>
       <% end %>
-    </tbody>
-  </table>
-</div>
+      <div class="card-body">
+        <h5 class="card-title" style="font-weight: bold; font-size: 20px" ><%= post.title %></h5>
+        <p>
+          <%= image_tag post.user.get_profile_image(40, 40), class: "rounded-circle" %>
+          <span style="font-weight: bold; margin-right: 5px;"><%= post.user.name %></span>
+          <i class="fa-regular fa-clock"></i>投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %>
+        </p>
+        <p class="card-text"><%= post.body %></p>
+        <p class="card-text">
+          <%= link_to post_path(post.id) do %>
+            <button class="btn btn-dark">詳細を見る</button>
+          <% end %>
+        </p>
+      </div>
+    </div>
+  <% end %>
 
-<div class="pagination d-flex justify-content-center margin-top: 20px;">
+
+<div class="pagination d-flex justify-content-center mt-5 mb-5">
   <%= paginate @posts %>
 </div>
