マイページ投稿一覧調整中

--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -5,10 +5,10 @@
   <table style="width: 75%; margin: auto; margin-top: 70px;">
     <thead>
       <th style="font-weight: bold; font-size: 30px;">
-        新規投稿 <i class="fa-solid fa-pen"></i>
+        投稿を作成 <i class="fa-solid fa-pen"></i>
       </th>
     </thead>
-    
+
     <tbody>
       <tr style="line-height: 4; vertical-align: middle;">
         <td>
