--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -13,7 +13,7 @@
 
 
   <% @posts.each do |post| %>
-    <div class="card mb-3" style="width: 50%; margin: auto; margin-top: 20px; border-radius: 25px; overflow: hidden;">
+    <div class="shadow card mb-3" style="width: 50%; margin: auto; margin-top: 20px; border-radius: 25px; overflow: hidden;">
       <% if post.post_image.attached? %>
         <%= image_tag post.post_image, class: "card-img-top", style: "width: 100%; height: 150px;" %>
       <% else %>
@@ -22,9 +22,11 @@
       <div class="card-body">
         <h5 class="card-title" style="font-weight: bold; font-size: 20px" ><%= post.title %></h5>
         <p>
-          <%= image_tag post.user.get_profile_image(40, 40), class: "rounded-circle" %>
+          <%= link_to user_path(post.user) do %>
+            <%= image_tag post.user.get_profile_image(40, 40), class: "rounded-circle" %>
+          <% end %>
           <span style="font-weight: bold; margin-right: 5px;"><%= post.user.name %></span>
-          <i class="fa-regular fa-clock"></i>投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %>
+          <i class="fa-regular fa-clock"></i> 投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %>
         </p>
         <p class="card-text"><%= post.body %></p>
         <p class="card-text">
