--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,10 +1,12 @@
 <%= flash[:post_success] %>
 
-<div class="card mb-3 mt-5" style="width: 60%; margin: auto; border-radius: 25px; overflow: hidden;">
+<div class="shadow-lg card mb-3 mt-5" style="width: 60%; margin: auto; border-radius: 25px; overflow: hidden;">
   <div class="card-header d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center">
-      <%= image_tag @post.user.get_profile_image(70, 70), class: "rounded-circle" %>
-      <span style="font-weight: bold; font-size: 20px; margin-left: 10px;"><%= @post.user.name %>
+      <%= link_to user_path(@post.user) do %>
+        <%= image_tag @post.user.get_profile_image(70, 70), class: "rounded-circle" %>
+        <span style="font-weight: bold; font-size: 20px; margin-left: 10px; color: black;"><%= @post.user.name %>
+      <% end %>
     </div>
     <% if current_user == @post.user %>
       <%= link_to edit_post_path, class: "text-dark text-right mr-2" do %>
@@ -12,7 +14,7 @@
       <% end %>
     <% end %>
   </div>
-  
+
   <div class="card-body">
     <% if @post.post_image.attached? %>
       <%= image_tag @post.post_image, class: "card-img-top", style: "width: 100%; height: 300px;" %>
