--- a/app/views/user/users/mypage.html.erb
+++ b/app/views/user/users/mypage.html.erb
@@ -4,7 +4,7 @@
       <button class="btn btn-dark btn-lg">投稿を作成する <i class="fa-solid fa-pen"></i></button>
     <% end %>
   </div>
-  <table class="col-md-12" style="margin: auto;">
+  <table class="col-md-11" style="margin: auto;">
     <tr>
       <td>
         <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>
@@ -40,7 +40,7 @@
 
   <table class="table col-10" style="margin: auto;">
     <tbody>
-      <tr style="line-height: 3; vertical-align: middle;">
+      <tr style="line-height: 2; vertical-align: middle;">
         <td style="font-size: 15px;"><strong>性別</strong></td>
         <td style="font-size: 20px;">
           <%= @user.gender_japanese %>
@@ -50,7 +50,7 @@
           <%= @user.age_japanese %>
         </td>
       </tr>
-      <tr style="line-height: 3; vertical-align: middle;">
+      <tr style="line-height: 2; vertical-align: middle;">
         <td style="font-size: 15px;"><strong>喫煙</strong></td>
         <td style="font-size: 20px;">
           <%= @user.smoking_japanese %>
@@ -60,7 +60,7 @@
           <%= @user.drinking_japanese %>
         </td>
       </tr>
-      <tr style="line-height: 3; vertical-align: middle;">
+      <tr style="line-height: 2; vertical-align: middle;">
         <td style="font-size: 15px;"><strong>行った国数</strong></td>
         <td style="font-size: 20px;">
           <%= @user.country_count.present? ? @user.country_count : '非公開' %>
@@ -70,7 +70,7 @@
           <%= @user.favorite_area_japanese %>
         </td>
       </tr>
-      <tr style="line-height: 3; vertical-align: middle;">
+      <tr style="line-height: 2; vertical-align: middle;">
         <td style="font-size: 15px;"><strong>予算</strong></td>
         <td style="font-size: 20px;">
           <%= @user.budget_japanese %>
@@ -84,8 +84,10 @@
   <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
     投稿一覧
   </div>
+  
+  
 
-  <table style="width: 60%; margin: auto; margin-top: 20px;">
+  <table style="width: 60%; margin: auto; margin-top: 20px; margin-bottom: 20px;" >
     <tbody>
       <% @posts.each do |post| %>
       <tr>
@@ -98,11 +100,14 @@
         <td style="font-weight: bold; font-size: 20px">
           <%= link_to post.title, post_path(post.id), style: "color: #343a40;" %>
         </td>
+        <td><i class="fa-regular fa-heart"></i></td>
+        <td><i class="fa-regular fa-comment-dots"></i></td>
       </tr>
+      <tr><td colspan="2" style="height: 5px;"></td></tr>
       <% end %>
     </tbody>
   </table>
-  
+
   <div class="pagination d-flex justify-content-center margin-top: 20px;">
     <%= paginate @posts %>
   </div>
