--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,1 +1,116 @@
-<h1>会員詳細</h1>
+
+<div class="container">
+  <!--<div class="mt-4" style="text-align: right;">-->
+  <!--  <%= link_to new_post_path, class: "text-dark" do %>-->
+  <!--    <button class="btn btn-dark btn-lg">投稿を作成する <i class="fa-solid fa-pen"></i></button>-->
+  <!--  <% end %>-->
+  <!--</div>-->
+  <table class="col-md-11 mt-5" style="margin: auto;">
+    <tr>
+      <td>
+        <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>
+      </td>
+      <td>
+        <div style="font-weight: bold; font-size: 50px;">
+          <%= @user.name %>
+        </div>
+        <div style="font-size: 20px;" class="mt-4">
+          <%= @user.bio %>
+        </div>
+      </td>
+      <td style="text-align: right;">
+        <button class="btn btn-outline-dark">フォローする</button>
+        <span style="margin: 0 6px;">&nbsp;</span>
+        <%= link_to chats_path, class: "text-dark" do %>
+          <button class="btn btn-outline-dark">チャットする</button>
+        <% end %>
+      </td>
+    </tr>
+  </table>
+
+  <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
+    プロフィール
+  </div>
+
+  <table class="table col-10" style="margin: auto;">
+    <tbody>
+      <tr style="line-height: 2; vertical-align: middle;">
+        <td style="font-size: 15px;"><strong>性別</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.gender_japanese %>
+        </td>
+        <td style="font-size: 15px;"><strong>年齢</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.age_japanese %>
+        </td>
+      </tr>
+      <tr style="line-height: 2; vertical-align: middle;">
+        <td style="font-size: 15px;"><strong>喫煙</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.smoking_japanese %>
+        </td>
+        <td style="font-size: 15px;"><strong>飲酒</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.drinking_japanese %>
+        </td>
+      </tr>
+      <tr style="line-height: 2; vertical-align: middle;">
+        <td style="font-size: 15px;"><strong>行った国数</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.country_count.present? ? @user.country_count : '非公開' %>
+        </td>
+        <td style="font-size: 15px;"><strong>好きな地域</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.favorite_area_japanese %>
+        </td>
+      </tr>
+      <tr style="line-height: 2; vertical-align: middle;">
+        <td style="font-size: 15px;"><strong>予算</strong></td>
+        <td style="font-size: 20px;">
+          <%= @user.budget_japanese %>
+        </td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
+    投稿一覧
+  </div>
+
+  <table style="width: 60%; margin: auto; margin-top: 20px;">
+    <tbody>
+      <% @posts.each do |post| %>
+      <tr>
+        <td>
+          <%= link_to(post.user) do %>
+          <%= image_tag post.user.get_profile_image(50, 50), class: "rounded-circle" %>
+          <span style="color: #343a40; font-weight: bold; margin-left: 3px;"><%= post.user.name %></span>
+          <% end %>
+        </td>
+        <td style="font-weight: bold; font-size: 20px">
+          <%= link_to post.title, post_path(post.id), style: "color: #343a40;" %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <div class="pagination d-flex justify-content-center margin-top: 20px;">
+    <%= paginate @posts %>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
