--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,10 +1,6 @@
 
 <div class="container">
-  <!--<div class="mt-4" style="text-align: right;">-->
-  <!--  <%= link_to new_post_path, class: "text-dark" do %>-->
-  <!--    <button class="btn btn-dark btn-lg">投稿を作成する <i class="fa-solid fa-pen"></i></button>-->
-  <!--  <% end %>-->
-  <!--</div>-->
+
   <table class="col-md-11 mt-5" style="margin: auto;">
     <tr>
       <td>
@@ -79,7 +75,7 @@
     投稿一覧
   </div>
 
-  <table style="width: 60%; margin: auto; margin-top: 20px;">
+  <table style="width: 60%; margin: auto; margin-top: 20px;" >
     <tbody>
       <% @posts.each do |post| %>
       <tr>
@@ -92,12 +88,15 @@
         <td style="font-weight: bold; font-size: 20px">
           <%= link_to post.title, post_path(post.id), style: "color: #343a40;" %>
         </td>
+        <td><i class="fa-regular fa-heart"></i></td>
+        <td><i class="fa-regular fa-comment-dots"></i></td>
       </tr>
+      <tr><td colspan="2" style="height: 10px;"></td></tr>
       <% end %>
     </tbody>
   </table>
 
-  <div class="pagination d-flex justify-content-center margin-top: 20px;">
+  <div class="pagination d-flex justify-content-center mt-4 mb-5">
     <%= paginate @posts %>
   </div>
 </div>
