--- a/app/views/user/users/mypage.html.erb
+++ b/app/views/user/users/mypage.html.erb
@@ -4,35 +4,36 @@
       <button class="btn btn-dark btn-lg">投稿を作成する <i class="fa-solid fa-pen"></i></button>
     <% end %>
   </div>
-  <table class="col-md-11" style="margin: auto;">
-    <tr>
-      <td>
-        <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>
-      </td>
-      <td>
+
+  <div class="container">
+    <div class="row col-11" style="margin: auto;">
+      <div class="col-12 col-md-3 mb-3 mb-md-0">
+        <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>-
+      </div>
+      <div class="col-12 col-md-8">
         <div style="font-weight: bold; font-size: 50px;">
           <%= @user.name %>
         </div>
-        <div style="font-size: 20px;" class="mt-4">
+        <div style="font-size: 20px;">
           <%= @user.bio %>
         </div>
-      </td>
-      <td style="text-align: right;">
-        <%= link_to edit_mypage_path, class: "text-dark" do %>
-          <button class="btn btn-outline-dark">プロフィールを編集する</button>
-        <% end %>
-        <span style="margin: 0 6px;">&nbsp;</span>
-        <%= link_to chats_path, class: "text-dark" do %>
-          <button class="btn btn-outline-dark">チャットする</button>
-        <% end %>
-        <span style="margin: 0 6px;">&nbsp;</span>
-        <!--いいねした投稿一覧のurlが作成できてないため暫定的に新規登録画面のurl貼り付けてます-->
-        <%= link_to new_post_path, class: "text-dark" do %>
-          <button class="btn btn-outline-dark">いいね(新規投稿)</button>
-        <% end %>
-      </td>
-    </tr>
-  </table>
+        <div class="text-end mt-4">
+          <%= link_to edit_mypage_path, class: "text-dark" do %>
+            <button class="btn btn-outline-dark">プロフィールを編集する</button>
+          <% end %>
+          <span style="margin: 0 6px;">&nbsp;</span>
+          <%= link_to chats_path, class: "text-dark" do %>
+            <button class="btn btn-outline-dark">チャットする</button>
+          <% end %>
+          <span style="margin: 0 6px;">&nbsp;</span>
+          <!--いいねした投稿一覧のurlが作成できてないため暫定的に新規登録画面のurl貼り付けてます-->
+          <%= link_to new_post_path, class: "text-dark" do %>
+            <button class="btn btn-outline-dark">いいね(新規投稿)</button>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
     プロフィール
@@ -84,7 +85,7 @@
   <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
     投稿一覧
   </div>
-  
+
   <table style="width: 60%; margin: auto; margin-top: 20px;" >
     <tbody>
       <% @posts.each do |post| %>
