--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -24,30 +24,6 @@
       </div>
     </div>
   </div>
-  
-  
-  <!--<table class="col-md-11 mt-5" style="margin: auto;">-->
-  <!--  <tr>-->
-  <!--    <td>-->
-  <!--      <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>-->
-  <!--    </td>-->
-  <!--    <td>-->
-  <!--      <div style="font-weight: bold; font-size: 50px;">-->
-  <!--        <%= @user.name %>-->
-  <!--      </div>-->
-  <!--      <div style="font-size: 20px;" class="mt-4">-->
-  <!--        <%= @user.bio %>-->
-  <!--      </div>-->
-  <!--    </td>-->
-  <!--    <td style="text-align: right;">-->
-  <!--      <button class="btn btn-outline-dark">フォローする</button>-->
-  <!--      <span style="margin: 0 6px;">&nbsp;</span>-->
-  <!--      <%= link_to chats_path, class: "text-dark" do %>-->
-  <!--        <button class="btn btn-outline-dark">チャットする</button>-->
-  <!--      <% end %>-->
-  <!--    </td>-->
-  <!--  </tr>-->
-  <!--</table>-->
 
   <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
     プロフィール
@@ -100,7 +76,7 @@
     投稿一覧
   </div>
 
-  <table style="width: 60%; margin: auto; margin-top: 20px;" >
+  <table style="width: 70%; margin: auto; margin-top: 20px;" >
     <tbody>
       <% @posts.each do |post| %>
       <tr>
@@ -113,7 +89,7 @@
         <td style="font-weight: bold; font-size: 20px">
           <%= link_to post.title, post_path(post.id), style: "color: #343a40;" %>
         </td>
-        <td><i class="fa-regular fa-heart"></i></td>
+        <td><i class="fa-regular fa-heart mr-2"></i><%= post.likes.count %></td>
         <td><i class="fa-regular fa-comment-dots"></i></td>
       </tr>
       <tr><td colspan="2" style="height: 10px;"></td></tr>
