--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -15,7 +15,7 @@
       <% if post.post_image.attached? %>
         <%= image_tag post.post_image, class: "card-img-top", style: "width: 100%; height: 150px;" %>
       <% else %>
-        <%= image_tag 'no_image2', class: "card-img-top", style: "width: 100%; height: 150px;" %>
+        <%= image_tag 'no_image2.png', class: "card-img-top", style: "width: 100%; height: 150px;" %>
       <% end %>
       <div class="card-body">
         <h5 class="card-title" style="font-weight: bold; font-size: 20px" ><%= post.title %></h5>
@@ -34,7 +34,7 @@
             <% end %>
             <div class="d-flex align-items-center mr-5">
               <i class="fa-regular fa-comment-dots fa-2x mr-4"></i>
-                <div class="like_btn_<%= post.id %>">
+                <div id="like_btn_<%= post.id %>">
                   <%= render 'user/likes/btn', post: post %>
                 </div>
               <!--<% if current_user && post.liked_by?(current_user) %>-->
