画像拡張子追加

--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -38,6 +38,7 @@
           <div style="margin-top: 10px;">
             <%= f.file_field :post_image, accept: 'image/*'%>
           </div>
+          ※横幅は750px以上を推奨します。それ以下のサイズでは、正しく表示されない場合があります。
         </td>
       </tr>
     </tbody>
