--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -13,9 +13,9 @@
   <% @posts.each do |post| %>
     <div class="shadow card mb-3" style="width: 50%; margin: auto; margin-top: 20px; border-radius: 25px; overflow: hidden;">
       <% if post.post_image.attached? %>
-        <%= image_tag post.post_image, class: "card-img-top", style: "width: 100%; height: 150px;" %>
+        <%= image_tag post.post_image, class: "card-img-top", style: "width: 100%;" %>
       <% else %>
-        <%= image_tag 'no_image2.png', class: "card-img-top", style: "width: 100%; height: 150px;" %>
+        <%= image_tag 'no_image2.png', class: "card-img-top", style: "width: 100%;" %>
       <% end %>
       <div class="card-body">
         <h5 class="card-title" style="font-weight: bold; font-size: 20px" ><%= post.title %></h5>
