--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -22,7 +22,7 @@
     <% if @post.post_image.attached? %>
       <%= image_tag @post.post_image, class: "card-img-top", style: "width: 100%; height: 300px;" %>
     <% else %>
-      <%= image_tag 'no_image2', class: "card-img-top", style: "width: 100%; height: 300px;" %>
+      <%= image_tag 'no_image2.png', class: "card-img-top", style: "width: 100%; height: 300px;" %>
     <% end %>
     <h5 class="card-title" style="font-weight: bold; font-size: 30px; margin-top: 20px;" ><%= @post.title %></h5>
     <i class="fa-regular fa-clock ml-2"></i> 投稿日：<%= @post.created_at.strftime("%Y年%m月%d日") %>
