--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,43 +1,115 @@
 <div class="cotainer">
-  <h2 class="d-flex justify-content-center mt-5">会員登録</h2>
+  <%= form_with model: @user, url: user_registration_path do |f| %>
+  <table class="d-flex justify-content-center" style="width: 80%; margin: auto; margin-top: 70px;">
+    <tbody>
+      <tr>
+        <td class="text-center" style="font-weight: bold; font-size: 30px;">
+          会員登録 <i class="fa-solid fa-user-plus"></i>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div style="margin-top: 30px;">
+            <strong>ユーザーネーム</strong> <span class="badge badge-danger">必須</span>
+          </div>
+          <div>
+            <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="mt-3">
+            <strong>メールアドレス</strong> <span class="badge badge-danger">必須</span>
+          </div>
+          <div>
+            <%= f.email_field :email, autocomplete: "email" %>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="mt-3">
+            <strong>パスワード</strong> <span class="badge badge-danger">必須</span>
+          </div>
+          <div>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "new-password" %>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="mt-3">
+            <strong>パスワード(確認用)</strong> <span class="badge badge-danger">必須</span>
+          </div>
+          <div>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="mt-3 text-center">
+            <%= f.submit "会員登録", class: "btn btn-dark"%>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <% end %>
+</div>
 
-    <div class="row d-flex justify-content-center mt-3">
-      <%= form_with model: @user, url: user_registration_path do |f| %>
-        <%= render "user/shared/error_messages", resource: resource %>
 
-        <div class="field">
-          <%= f.label :name %><br />
-          <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-        </div>
 
-        <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autocomplete: "email" %>
-        </div>
 
-        <div class="field">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password" %>
-        </div>
 
-        <div class="field">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-        </div>
 
-        <div class="actions mt-3">
-          <%= f.submit "会員登録" %>
-        </div>
-      <% end %>
-    </div>
 
-    <div class="row d-flex justify-content-center mt-3">
-      <%= render "user/shared/links" %>
-    </div>
 
-  </div>
+<!--<div class="cotainer">-->
+<!--  <h2 class="d-flex justify-content-center mt-5" style="font-weight: bold; font-size: 30px;">-->
+<!--  会員登録<i class="fa-solid fa-user-plus ml-1"></i></h2>-->
+
+<!--    <div class="row d-flex justify-content-center mt-3">-->
+<!--      <%= form_with model: @user, url: user_registration_path do |f| %>-->
+<!--        <%= render "user/shared/error_messages", resource: resource %>-->
+
+<!--        <div class="field">-->
+<!--          <%= f.label :name %><br />-->
+<!--          <%= f.text_field :name, autofocus: true, autocomplete: "name" %>-->
+<!--        </div>-->
+
+<!--        <div class="field">-->
+<!--          <%= f.label :email %><br />-->
+<!--          <%= f.email_field :email, autocomplete: "email" %>-->
+<!--        </div>-->
+
+<!--        <div class="field">-->
+<!--          <%= f.label :password %>-->
+<!--          <% if @minimum_password_length %>-->
+<!--          <em>(<%= @minimum_password_length %> characters minimum)</em>-->
+<!--          <% end %><br />-->
+<!--          <%= f.password_field :password, autocomplete: "new-password" %>-->
+<!--        </div>-->
+
+<!--        <div class="field">-->
+<!--          <%= f.label :password_confirmation %><br />-->
+<!--          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>-->
+<!--        </div>-->
+
+<!--        <div class="actions mt-3">-->
+<!--          <%= f.submit "会員登録" %>-->
+<!--        </div>-->
+<!--      <% end %>-->
+<!--    </div>-->
+
+<!--    <div class="row d-flex justify-content-center mt-3">-->
+<!--      <%= render "user/shared/links" %>-->
+<!--    </div>-->
+
+<!--  </div>-->
 
 
