ログイン画面レイアウト修正

--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -60,6 +60,11 @@
     </tbody>
   </table>
   <% end %>
+  
+  <div class="row d-flex justify-content-center mt-4">
+    <%= render "user/shared/links" %>
+  </div>
+ 
 </div>
 
 
@@ -106,9 +111,9 @@
 <!--      <% end %>-->
 <!--    </div>-->
 
-<!--    <div class="row d-flex justify-content-center mt-3">-->
-<!--      <%= render "user/shared/links" %>-->
-<!--    </div>-->
+    <!--<div class="row d-flex justify-content-center mt-3">-->
+    <!--  <%= render "user/shared/links" %>-->
+    <!--</div>-->
 
 <!--  </div>-->
 
