--- a/app/views/user/shared/_links.html.erb
+++ b/app/views/user/shared/_links.html.erb
@@ -1,8 +1,8 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <%= link_to "※既に会員登録済の方はこちら", new_session_path(resource_name), style: "color: #343a40;" %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <%= link_to "※会員登録がお済でない方はこちら", new_registration_path(resource_name), style: "color: #343a40;" %><br />
 <% end %>
 
